[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gopherqueue"
version = "1.1.2"
description = "Python SDK for GopherQueue - Enterprise-grade background job processing"
readme = "README.md"
license = "MIT"
authors = [
    { name = "GopherQueue Team", email = "team@gopherqueue.dev" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
]
keywords = ["background-jobs", "task-queue", "job-scheduler", "async", "gopherqueue"]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.8.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sa001gar/gopherqueue"
Documentation = "https://github.com/sa001gar/gopherqueue/tree/main/sdks/python"
Repository = "https://github.com/sa001gar/gopherqueue"
Issues = "https://github.com/sa001gar/gopherqueue/issues"

[tool.hatch.build.targets.wheel]
packages = ["gopherqueue"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.8"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
